tests/samples/compile_errors/redim_target/non_array.bas
Attribute VB_Name = "RedimNonArray"
Sub TestRedim()
    Dim x As Long
    ReDim x(1 To 10)  ' x is not a dynamic array
End Sub
